# PSAutomater

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  lint.yml  tests.yml
hello/: __init__.py  __main__.py
hello/core/: api.py  cmd_handler.py  hello.py  info.py
psautomater/: __init__.py  __main__.py
psautomater/core/: api.py  cmd_handler.py  default_logger.py  gui.py  help.py  info.py  list_reader.py  models.py  output_generator.py  photoshop.py  pyside6_types.py  resources.py
psautomater/core/data_reader/: spreadsheet.py
psautomater/core/psd_engines/: photoshop_com_api.py
psautomater/gui/: layer_selection.py  mainInterface.py  main_interface.py  sheet_selection.py
tests/: test_info.py
