[project]
name = "psautomater"
version = "0.2.2"
description = "A Photoshop Editing Automation Tool for bulk editing."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastexcel>=0.19.0",
    "loguru>=0.7.3",
    "mediapipe>=0.10.33",
    "photoshop-python-api>=0.24.2 ; sys_platform == 'win32'",
    "polars>=1.39.3",
    "psd-tools[composite]>=1.14.3",
    "pyside6>=6.11.0",
    "rembg[cpu]>=2.0.74",
]

[dependency-groups]
dev = ["black>=26.3.1", "isort>=8.0.1", "nuitka>=4.0.7", "pylint>=4.0.5", "pytest>=9.0.2", "pytest-cov>=7.1.0"]

[tool.pylint.main]
py-version = "3.14"
extension-pkg-allow-list = ["PySide6"]

[tool.pylint.typecheck]
ignored-modules = ["PySide6", "PySide6.QtCore", "PySide6.QtGui", "PySide6.QtWidgets"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cache-clear --color=yes --code-highlight=yes --cov --cov-branch --cov-report=term --cov-report=xml -vvv"
testpaths = ["tests"]
